--- a/src/styles/items.scss
+++ b/src/styles/items.scss
@@ -57,6 +57,7 @@
     }
 
     .form + div {
+    // > div {
         height: 100vh;
         display: flex;
         width: 100%;
@@ -131,4 +132,28 @@ button.cart-add {
     align-items: center;
     width: 100%;
     justify-content: space-between;
+}
+
+.cart-addon {
+    margin-top: auto;
+    display: flex;
+    &__modal {
+        margin-top: 8px;
+    }
+    // margin-top: 8px;
+    justify-content: space-between;
+    align-items: center;
+    button {
+        cursor: pointer;
+        background-color: $primary;
+        border-radius: 4px;
+        border: unset;
+        font-size: 14px;
+        padding: 8px 12px;
+        color: $white;
+    }
+    span.counter {
+        font-weight: lighter;
+        padding: 0 16px;
+    }
 }
